syntax = "proto3";

package cr8r.client;

message WatchExperimentRequest {
    string experiment_id = 1;
}

message WatchExperimentReply {
    string line = 1;
}