syntax = "proto3";

package cr8r.core;

message Experiment {
    string id = 1;
    ExperimentStatus status = 2;
}

enum ExperimentStatus {
    AWAITING_RUNNER = 0;
    RUNNING = 1;
    FINISHED = 2;
}

// ----- //

message ExperimentDefinition {
    message TrySystem {
        string system = 1;
    }

    message TryToolchain {
        string toolchain = 1;
    }

    oneof experiment_definition_inner {
        TrySystem try_system = 1;
        TryToolchain try_toolchain = 2;
    }
}